# muTimer

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  LICENSE  README.md  pyproject.json  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
muTimer/: Timer.py  __init__.py
tests/: test_timer.py
