[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "muTimer/_version.py"

[project]
name = "muTimer"
dynamic = ["version"]
description = "Hierarchical timing utility with nested context manager support"
authors = [
    {name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de"},
    {name = "Christoph Huber", email = "christoph.huber@kit.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pastewka/muTimer"

[project.optional-dependencies]
test = ["pytest", "psutil"]
memory = ["psutil"]
